# employee-attrition-risk-and-retention

./: .gitignore  README.md  data-sources.md  pyproject.toml  requirements.txt
data/: README.md  data_manifest.md
data/powerbi/: fact_employees.csv  kpi_attrition_by_department.csv  kpi_attrition_by_job_role.csv  kpi_attrition_by_overtime.csv  kpi_attrition_by_tenure_band.csv  kpi_attrition_overview.csv  kpi_cost_by_department.csv
notebooks/: attrition_analysis.ipynb
outputs/: annual_attrition_cost.csv  attrition_by_businesstravel.csv  attrition_by_department.csv  attrition_by_incomequartile.csv  attrition_by_joblevel.csv  attrition_by_jobrole.csv  attrition_by_jobsatisfaction.csv  attrition_by_maritalstatus.csv  attrition_by_overtime.csv  attrition_by_tenureband.csv  clean_hr_data.csv  cost_model_assumptions.csv  cost_per_departure.csv  data_quality_report.md  flight_risk_segments.csv  hr_data_with_costs.csv  logreg_odds_ratios.csv  model_metrics.csv  model_report.md  shap_importance.csv
power-bi/: README.md  dashboard_brief.md  data_model.md  dax_measures.md  manual_build_instructions.md  refresh_instructions.md
scripts/: make_notebook.py  run_cost_model.py  run_eda.py  run_modeling.py  run_sql.py
sql/: README.md  analysis_queries.sql  create_tables.sql  data_quality_checks.sql  kpi_views.sql
src/attrition/: cost_model.py  modeling.py  viz.py
tests/: test_cost_model.py
