[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attrition-analysis"
version = "1.0.0"
description = "Employee attrition cost model, prediction, and retention strategy"
authors = [{ name = "Shalom Wu" }]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
